
    YARN-3986. getTransferredContainers in AbstractYarnScheduler should be present
    in YarnScheduler interface instead. (Varun Saxena via rohithsharmaks)

    YARN-4610. Reservations continue looking for one app causes other apps to
    starve (jlowe)

    YARN-3768. ArrayIndexOutOfBoundsException with empty environment variables.
    (Zhihai Xu via gera)

    YARN-4326. Fix TestDistributedShell timeout as AHS in MiniYarnCluster no longer 
    binds to default port 8188. (Meng Ding via wangda)

    YARN-4374. RM capacity scheduler UI rounds user limit factor (Chang Li via
    jlowe)

    YARN-4380. TestResourceLocalizationService.testDownloadingResourcesOnContainerKill
    fails intermittently. (Varun Saxena via ozawa)

    YARN-4121. Fix typos in capacity scheduler documentation.
    (Kai Sasaki via vvasudev)

    YARN-4581. AHS writer thread leak makes RM crash while RM is recovering.
    (sandflee via junping_du)

    YARN-3602. TestResourceLocalizationService.testPublicResourceInitializesLocalDir
    fails Intermittently due to IOException from cleanup. (zhihai xu via xgong)

    YARN-4707. Remove the extra char (>) from SecureContainer.md.
    (Brahma Reddy Battula via aajisaka)

    YARN-4723. NodesListManager$UnknownNodeId ClassCastException (Kuhu Shukla
    via jlowe)

    YARN-4760. proxy redirect to history server uses wrong URL (Eric Badger
    via jlowe)

    YARN-4773. Log aggregation performs extraneous filesystem operations when
    rolling log aggregation is disabled (Jun Gong via jlowe)

    YARN-4915. Fix typo in YARN Secure Containers documentation
    (Takashi Ohnishi via iwasakims)

    YARN-4917. Fix typos in documentation of Capacity Scheduler.
    (Takashi Ohnishi via iwasakims)

    YARN-4924. NM recovery race can lead to container not cleaned up.
    (sandflee via jlowe)

    YARN-4940. yarn node -list -all failed if RM start with decommissioned
    node (sandflee via jlowe)
